Fix countdown setting the wrong show time
Was previously wrong at times since setUTCHours will change the current date if the time overflows into another day

--- a/countdown.css
+++ b/countdown.css
@@ -3,12 +3,15 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 0.5rem;
 }
 
 .nextShow__countdown {
     display: flex;
     justify-content: center;
     gap: 0.5rem;
+    font-size: 2.5rem;
+    font-family: serif;
 }
 
 .nextShow__countdown-unit {
@@ -16,18 +19,51 @@
 }
 
 .nextShow__countdown > div {
-    font-size: 6rem;
     display: flex;
     display: inline-block;
     color: var(--color-secondary);
 }
 
 .nextShow__countdown-unit div:last-of-type {
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .nextShow p {
-    margin-top: 5rem;
+    margin-top: 1rem;
     font-size: 1rem;
-    color: var(--color-primary-dark);
+    color: var(--color-primary);
+    text-align: center;
+
+    font-family: Cormorant, serif;
+}
+
+@media (min-width: 350px) {
+    .nextShow__countdown {
+        font-size: 2.5rem;
+    }
+}
+
+@media (min-width: 700px) {
+    .nextShow__countdown {
+        font-size: 4rem;
+    }
+
+    .nextShow__countdown-unit div:last-of-type {
+        font-size: 2rem;
+    }
+
+    .nextShow p {
+        margin-top: 2rem;
+        font-size: 1.25rem;
+    }
+}
+
+@media (min-width: 1200px) {
+    .nextShow__countdown {
+        font-size: 5rem;
+    }
+
+    .nextShow p {
+        font-size: 1.5rem;
+    }
 }
